Добавлено вычисление индивидуальной скидки на основе общего числа реализованной продукции

--- a/FinalExamVariation/Views/MainWindow.xaml
+++ b/FinalExamVariation/Views/MainWindow.xaml
@@ -53,7 +53,7 @@
                             <TextBlock Grid.Column="1"
                                        VerticalAlignment="Top"
                                        HorizontalAlignment="Right"
-                                       Text="10%"
+                                       Text="{Binding DiscountProc}"
                                        FontSize="16"
                                        Margin="15"/>
                         </Grid>
